[refactor] chatlog와 ai_diaries 분리를 위해 파일명 변경